Correction des overflow

--- a/site/style/index.css
+++ b/site/style/index.css
@@ -189,11 +189,12 @@ header {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	width: 100vw;
+	max-width: 100%;
 	position: fixed;
 	top: 0;
 	z-index: 100;
 	justify-content: space-between;
-	width: 100vw;
 	border-radius: 0 0 10px 10px;
 	box-shadow: 0 15px 20px -15px #cecece;
 }
@@ -238,7 +239,7 @@ header > section > p,
 	margin: 0;
 	padding: 0 10px 0 0;
 	text-align: end;
-	overflow-x: scroll;
+	overflow-x: auto;
 	white-space: nowrap;
 }
 header > section:last-child .dropbtn {
@@ -576,6 +577,7 @@ footer {
 	justify-content: space-evenly;
 	align-items: center;
 	width: 100vw;
+	max-width: 100%;
 	height: 85px;
 	z-index: 1;
 	margin-top: 72px;
